@@ -4,16 +4,17 @@ importFrom(rjags, "jags.model", "coda.samples", "adapt")
 
 import(parallel)
 
-exportClasses("simplejags")
+exportClasses("jagsUI")
 
 exportMethods("traceplot")
 
-export("jags", "simplejags", "pp.check", "traceplot", 
+export("jags", "jagsUI","pp.check", "traceplot", 
        "whiskerplot")
 
-S3method("plot", "simplejags")
-S3method("xyplot", "simplejags")
-S3method("densityplot", "simplejags")
-S3method("print","simplejags")
-S3method("update","simplejags")
+S3method("plot", "jagsUI")
+S3method("xyplot", "jagsUI")
+S3method("densityplot", "jagsUI")
+S3method("print","jagsUI")
+S3method("update","jagsUI")
+S3method("summary","jagsUI")
 
