@@ -1,5 +1,5 @@
 
-plot.simplejags <- function(x){
+plot.jagsUI <- function(x){
   devAskNewPage(ask=FALSE)
   plot(x$samples,ask=TRUE)
   devAskNewPage(ask=FALSE)
