@@ -1,6 +1,6 @@
 
 pp.check <- function(x, actual, new){
-  if(class(x)!="simplejags"){stop('Requires simplejags object as input')}
+  if(class(x)!="jagsUI"){stop('Requires jagsUI object as input')}
   devAskNewPage(ask=FALSE)
   actual <- eval(parse(text=paste('x$sims.list$',actual,sep="")))
   new <- eval(parse(text=paste('x$sims.list$',new,sep="")))
