@@ -1,11 +1,11 @@
 
-print.simplejags <- function(x,digits=3){
+print.jagsUI <- function(x,digits=3){
   
   #bugs.format=TRUE prints a nearly exact replica of WinBUGS-style output
   
   #Header
   if(!x$bugs.format){
-    cat('JAGS output for model \'',x$modfile,'\', generated by simplejags.','\n',sep="")
+    cat('JAGS output for model \'',x$modfile,'\', generated by jagsUI.','\n',sep="")
     cat('Estimates based on',x$mcmc.info$n.chains,'chains of',x$mcmc.info$n.iter,'iterations,') 
     cat(' burn-in = ',x$mcmc.info$n.burnin,' and thin rate = ',x$mcmc.info$n.thin,',','\n',sep="")
     cat('yielding',x$mcmc.info$n.samples,'total samples from the joint posterior.','\n')
