@@ -1,0 +1,5 @@
+
+summary.jagsUI <- function(x,digits=3){
+  
+  print(x,digits=digits)
+}
