@@ -9,11 +9,11 @@ setGeneric("traceplot",
 } 
 
 #Set traceplot method
-setClass("simplejags")
+setClass("jagsUI")
 
-setMethod("traceplot", signature(x = "simplejags"),
+setMethod("traceplot", signature(x = "jagsUI"),
   function (x, parameters=NULL, ...) {
-    if(class(x)!="simplejags"){stop('Requires simplejags object as input')}
+    if(class(x)!="jagsUI"){stop('Requires jagsUI object as input')}
     samples <- x$samples
     
     if(is.null(parameters)){params <- names(as.data.frame(samples[[1]]))
