@@ -1,5 +1,5 @@
 
-xyplot.simplejags <- function(x){
+xyplot.jagsUI <- function(x){
   devAskNewPage(ask=FALSE)
   xyplot(x$samples)
 }
